<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="team_1">team1</string>
    <string name="minus_button">minusbutton</string>
    <string name="initial_count">0</string>
    <string name="plus_button">plusbutton</string>
    <string name="team_2">team2</string>
    <string name="night_mode">Night mode</string>
    <string name="day_mode">Day mode</string>
</resources>
