<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <TextView
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#07ea07"/>
        <ImageButton
            android:id="@+id/decreaseTeam1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/minus_button"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_minus"
            style="@style/MinusButtons"
            android:onClick="decreaseScore"/>

        <TextView
            android:id="@+id/score_1"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/initial_count" />
        <ImageButton
            android:id="@+id/increaseTeam1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_plus"
            style="@style/PlusButtons"
            android:onClick="increaseScore"/>




    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            style="@style/TeamText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/team_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#11ff00"/>
        <ImageButton
            android:id="@+id/decreaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/minus_button"
            android:background="@drawable/button_background"
        android:src="@drawable/ic_minus"
            style="@style/MinusButtons"
            android:onClick="decreaseScore"/>

        <TextView
            android:id="@+id/score_2"
            style="@style/ScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/initial_count" />
        <ImageButton
            android:id="@+id/increaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/plus_button"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_plus"
            style="@style/PlusButtons"
            android:onClick="increaseScore"/>
    </RelativeLayout>

</LinearLayout>